[gd_scene load_steps=3 format=3 uid="uid://dmdxlneb8ogg5"]

[ext_resource type="PackedScene" uid="uid://mmhajmqwcfod" path="res://scenes/simulation_tile_map.tscn" id="1_0l4qu"]
[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_bfdyb"]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_bfdyb")

[node name="Background" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 128.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="SimulationTileMap" parent="." instance=ExtResource("1_0l4qu")]
layer_0/tile_data = PackedInt32Array(65536, 262144, 0, 131072, 262144, 0, 196608, 262144, 0, 262144, 262144, 0, 327680, 262144, 0, 393216, 262144, 0, 458752, 262144, 0, 524288, 262144, 0, 589824, 262144, 0, 655360, 262144, 0, 720896, 262144, 0, 786432, 262144, 0, 851968, 262144, 0, 917504, 262144, 0, 983040, 262144, 0, 1048576, 262144, 0, 1114112, 262144, 0, 1179648, 262144, 0, 1245184, 262144, 0, 1310720, 262144, 0, 1376256, 262144, 0, 1441792, 262144, 0, 1507328, 262144, 0, 1572864, 262144, 0, 1638400, 262144, 0, 1703936, 262144, 0, 1769472, 262144, 0, 1835008, 262144, 0, 1900544, 262144, 0, 1966080, 262144, 0, 2031616, 262144, 0, 2097152, 262144, 0, 2162688, 262144, 0, 2228224, 262144, 0, 2293760, 262144, 0, 2359296, 262144, 0, 2424832, 262144, 0, 2490368, 262144, 0, 2555904, 262144, 0, 2621440, 262144, 0, 2686976, 262144, 0, 2752512, 262144, 0, 2818048, 262144, 0, 2883584, 262144, 0, 2949120, 262144, 0, 3014656, 262144, 0, 3080192, 262144, 0, 3145728, 262144, 0, 3211264, 262144, 0, 3276800, 262144, 0, 3342336, 262144, 0, 0, 262144, 0, 1, 262144, 0, 2, 262144, 0, 3, 262144, 0, 4, 262144, 0, 5, 262144, 0, 6, 262144, 0, 7, 262144, 0, 8, 262144, 0, 9, 262144, 0, 10, 262144, 0, 11, 262144, 0, 12, 262144, 0, 13, 262144, 0, 14, 262144, 0, 15, 262144, 0, 16, 262144, 0, 17, 262144, 0, 18, 262144, 0, 19, 262144, 0, 20, 262144, 0, 21, 262144, 0, 22, 262144, 0, 23, 262144, 0, 24, 262144, 0, 25, 262144, 0, 26, 262144, 0, 27, 262144, 0, 28, 262144, 0, 29, 262144, 0, 30, 262144, 0, 31, 262144, 0, 32, 262144, 0, 33, 262144, 0, 34, 262144, 0, 35, 262144, 0, 36, 262144, 0, 37, 262144, 0, 38, 262144, 0, 39, 262144, 0, 40, 262144, 0, 41, 262144, 0, 42, 262144, 0, 43, 262144, 0, 44, 262144, 0, 45, 262144, 0, 46, 262144, 0, 47, 262144, 0, 49, 262144, 0, 50, 262144, 0, 51, 262144, 0, 52, 262144, 0, 53, 262144, 0, 55, 262144, 0, 56, 262144, 0, 57, 262144, 0, 58, 262144, 0, 59, 262144, 0, 61, 262144, 0, 62, 262144, 0, 63, 262144, 0, 64, 262144, 0, 65, 262144, 0, 67, 262144, 0, 68, 262144, 0, 69, 262144, 0, 71, 262144, 0, 72, 262144, 0, 73, 262144, 0, 74, 262144, 0, 75, 262144, 0, 76, 262144, 0, 78, 262144, 0, 79, 262144, 0, 80, 262144, 0, 81, 262144, 0, 82, 262144, 0, 83, 262144, 0, 84, 262144, 0, 85, 262144, 0, 86, 262144, 0, 87, 262144, 0, 88, 262144, 0, 89, 262144, 0, 90, 262144, 0, 91, 262144, 0, 92, 262144, 0, 93, 262144, 0, 94, 262144, 0, 95, 262144, 0, 96, 262144, 0, 97, 262144, 0, 98, 262144, 0, 99, 262144, 0, 100, 262144, 0, 101, 262144, 0, 102, 262144, 0, 103, 262144, 0, 104, 262144, 0, 105, 262144, 0, 106, 262144, 0, 107, 262144, 0, 108, 262144, 0, 109, 262144, 0, 110, 262144, 0, 111, 262144, 0, 112, 262144, 0, 113, 262144, 0, 114, 262144, 0, 115, 262144, 0, 116, 262144, 0, 117, 262144, 0, 118, 262144, 0, 119, 262144, 0, 120, 262144, 0, 121, 262144, 0, 122, 262144, 0, 123, 262144, 0, 124, 262144, 0, 125, 262144, 0, 126, 262144, 0, 127, 262144, 0, 65663, 262144, 0, 131199, 262144, 0, 196735, 262144, 0, 262271, 262144, 0, 327807, 262144, 0, 393343, 262144, 0, 458879, 262144, 0, 524415, 262144, 0, 589951, 262144, 0, 655487, 262144, 0, 721023, 262144, 0, 786559, 262144, 0, 852095, 262144, 0, 917631, 262144, 0, 983167, 262144, 0, 1048703, 262144, 0, 1114239, 262144, 0, 1179775, 262144, 0, 1245311, 262144, 0, 1310847, 262144, 0, 1376383, 262144, 0, 1441919, 262144, 0, 1507455, 262144, 0, 1572991, 262144, 0, 1638527, 262144, 0, 1704063, 262144, 0, 1769599, 262144, 0, 1835135, 262144, 0, 1900671, 262144, 0, 1966207, 262144, 0, 2031743, 262144, 0, 2097279, 262144, 0, 2162815, 262144, 0, 2228351, 262144, 0, 2293887, 262144, 0, 2359423, 262144, 0, 2424959, 262144, 0, 2490495, 262144, 0, 2556031, 262144, 0, 2621567, 262144, 0, 2687103, 262144, 0, 2752639, 262144, 0, 2818175, 262144, 0, 2883711, 262144, 0, 2949247, 262144, 0, 3014783, 262144, 0, 3080319, 262144, 0, 3145855, 262144, 0, 3211391, 262144, 0, 3276927, 262144, 0, 3342463, 262144, 0, 3407872, 262144, 0, 3473408, 262144, 0, 3538944, 262144, 0, 3604480, 262144, 0, 3670016, 262144, 0, 3735552, 262144, 0, 3801088, 262144, 0, 3866624, 262144, 0, 3932160, 262144, 0, 3997696, 262144, 0, 3407999, 262144, 0, 3473535, 262144, 0, 3539071, 262144, 0, 3604607, 262144, 0, 3670143, 262144, 0, 3735679, 262144, 0, 3801215, 262144, 0, 3866751, 262144, 0, 3932287, 262144, 0, 3997823, 262144, 0, -65488, 393216, 2, -65482, 393216, 0, -65476, 393216, 2, -65470, 393216, 2, -65466, 393216, 0, -524212, 262144, 0, -458676, 262144, 0, -393140, 262144, 0, -327604, 262144, 0, -262068, 262144, 0, -196532, 262144, 0, -130996, 262144, 0, -65460, 262144, 0, -524211, 196608, 0, -458675, 196608, 0, -393139, 196608, 0, -327603, 196608, 0, -262067, 196608, 0, -196531, 196608, 0, -130995, 196608, 0, -65459, 196608, 0, -524210, 196608, 0, -458674, 196608, 0, -393138, 196608, 0, -327602, 196608, 0, -262066, 196608, 0, -196530, 196608, 0, -130994, 196608, 0, -65458, 196608, 0, -524209, 196608, 0, -458673, 196608, 0, -393137, 196608, 0, -327601, 196608, 0, -262065, 196608, 0, -196529, 196608, 0, -130993, 196608, 0, -65457, 196608, 0, -524208, 196608, 0, -458672, 196608, 0, -393136, 196608, 0, -327600, 196608, 0, -262064, 196608, 0, -196528, 196608, 0, -130992, 196608, 0, -65456, 196608, 0, -524207, 196608, 0, -458671, 196608, 0, -393135, 196608, 0, -327599, 196608, 0, -262063, 196608, 0, -196527, 196608, 0, -130991, 196608, 0, -65455, 196608, 0, -524206, 262144, 0, -458670, 262144, 0, -393134, 262144, 0, -327598, 262144, 0, -262062, 262144, 0, -196526, 262144, 0, -130990, 262144, 0, -65454, 262144, 0, 4653177, 262144, 0, 4653178, 262144, 0, 4653179, 262144, 0, 4653180, 262144, 0, 4653181, 262144, 0, 4653182, 262144, 0, 4063359, 262144, 0, 4128895, 262144, 0, 4194431, 262144, 0, 4259967, 262144, 0, 4325503, 262144, 0, 4391039, 262144, 0, 4456575, 262144, 0, 4522111, 262144, 0, 4587647, 262144, 0, 4653183, 262144, 0, 4063232, 262144, 0, 4128768, 262144, 0, 4194304, 262144, 0, 4259840, 262144, 0, 4325376, 262144, 0, 4390912, 262144, 0, 4456448, 262144, 0, 4521984, 262144, 0, 4587520, 262144, 0, 4653056, 262144, 0, 4653057, 262144, 0, 4653058, 262144, 0, 4653059, 262144, 0, 4653060, 262144, 0, 4653061, 262144, 0, 4653062, 262144, 0, 4653063, 262144, 0, 4653064, 262144, 0, 4653065, 262144, 0, 4653066, 262144, 0, 4653067, 262144, 0, 4653068, 262144, 0, 4653069, 262144, 0, 4653070, 262144, 0, 4653071, 262144, 0, 4653072, 262144, 0, 4653073, 262144, 0, 4653074, 262144, 0, 4653075, 262144, 0, 4653076, 262144, 0, 4653077, 262144, 0, 4653078, 262144, 0, 4653079, 262144, 0, 4653080, 262144, 0, 4653081, 262144, 0, 4653082, 262144, 0, 4653083, 262144, 0, 4653084, 262144, 0, 4653085, 262144, 0, 4653086, 262144, 0, 4653087, 262144, 0, 4653088, 262144, 0, 4653089, 262144, 0, 4653090, 262144, 0, 4653091, 262144, 0, 4653092, 262144, 0, 4653093, 262144, 0, 4653094, 262144, 0, 4653095, 262144, 0, 4653096, 262144, 0, 4653097, 262144, 0, 4653098, 262144, 0, 4653099, 262144, 0, 4653100, 262144, 0, 4653101, 262144, 0, 4653102, 262144, 0, 4653103, 262144, 0, 4653104, 262144, 0, 4653105, 262144, 0, 4653106, 262144, 0, 4653107, 262144, 0, 4653108, 262144, 0, 4653109, 262144, 0, 4653110, 262144, 0, 4653111, 262144, 0, 4653112, 262144, 0, 4653113, 262144, 0, 4653114, 262144, 0, 4653115, 262144, 0, 4653116, 262144, 0, 4653117, 262144, 0, 4653118, 262144, 0, 4653119, 262144, 0, 4653120, 262144, 0, 4653121, 262144, 0, 4653122, 262144, 0, 4653123, 262144, 0, 4653124, 262144, 0, 4653125, 262144, 0, 4653126, 262144, 0, 4653127, 262144, 0, 4653128, 262144, 0, 4653129, 262144, 0, 4653130, 262144, 0, 4653131, 262144, 0, 4653132, 262144, 0, 4653133, 262144, 0, 4653134, 262144, 0, 4653135, 262144, 0, 4653136, 262144, 0, 4653137, 262144, 0, 4653138, 262144, 0, 4653139, 262144, 0, 4653140, 262144, 0, 4653141, 262144, 0, 4653142, 262144, 0, 4653143, 262144, 0, 4653144, 262144, 0, 4653145, 262144, 0, 4653146, 262144, 0, 4653147, 262144, 0, 4653148, 262144, 0, 4653149, 262144, 0, 4653150, 262144, 0, 4653151, 262144, 0, 4653152, 262144, 0, 4653153, 262144, 0, 4653154, 262144, 0, 4653155, 262144, 0, 4653156, 262144, 0, 4653157, 262144, 0, 4653158, 262144, 0, 4653159, 262144, 0, 4653160, 262144, 0, 4653161, 262144, 0, 4653162, 262144, 0, 4653163, 262144, 0, 4653164, 262144, 0, 4653165, 262144, 0, 4653166, 262144, 0, 4653167, 262144, 0, 4653168, 262144, 0, 4653169, 262144, 0, 4653170, 262144, 0, 4653171, 262144, 0, 4653172, 262144, 0, 4653173, 262144, 0, 4653174, 262144, 0, 4653175, 262144, 0, 4653176, 262144, 0, 786480, 262144, 0, 917552, 262144, 0, 1048624, 262144, 0, 1179696, 262144, 0, 786481, 262144, 0, 917553, 262144, 0, 1114168, 262144, 0, 1114171, 262144, 0, 1245244, 262144, 0, 589870, 262144, 0, 655406, 262144, 0, 720942, 262144, 0, 786478, 262144, 0, 852014, 262144, 0, 917550, 262144, 0, 983086, 262144, 0, 1048622, 262144, 0, 1114158, 262144, 0, 1179694, 262144, 0, 1245230, 262144, 0, 589871, 262144, 0, 1245231, 262144, 0, 720944, 262144, 0, 983088, 262144, 0, 1114160, 262144, 0, 1245232, 262144, 0, 720945, 262144, 0, 589874, 262144, 0, 917554, 262144, 0, 589875, 262144, 0, 655411, 262144, 0, 720947, 262144, 0, 786483, 262144, 0, 852019, 262144, 0, 917555, 262144, 0, 589877, 262144, 0, 655413, 262144, 0, 720949, 262144, 0, 786485, 262144, 0, 852021, 262144, 0, 917557, 262144, 0, 983093, 262144, 0, 1048629, 262144, 0, 1114165, 262144, 0, 1179701, 262144, 0, 1245237, 262144, 0, 1245238, 262144, 0, 1245239, 262144, 0, 589880, 262144, 0, 655416, 262144, 0, 720952, 262144, 0, 786488, 262144, 0, 852024, 262144, 0, 917560, 262144, 0, 983096, 262144, 0, 1048632, 262144, 0, 1179704, 262144, 0, 1245240, 262144, 0, 589883, 262144, 0, 655419, 262144, 0, 720955, 262144, 0, 786491, 262144, 0, 852027, 262144, 0, 1048635, 262144, 0, 1179707, 262144, 0, 1245243, 262144, 0, 852028, 262144, 0, 917564, 262144, 0, 983100, 262144, 0, 1048636, 262144, 0, 589885, 262144, 0, 655421, 262144, 0, 917565, 262144, 0, 983101, 262144, 0, 1179709, 262144, 0, 1245245, 262144, 0, 655422, 262144, 0, 720958, 262144, 0, 1114174, 262144, 0, 1179710, 262144, 0, 720959, 262144, 0, 786495, 262144, 0, 1048639, 262144, 0, 655424, 262144, 0, 720960, 262144, 0, 1114176, 262144, 0, 1179712, 262144, 0, 589889, 262144, 0, 655425, 262144, 0, 917569, 262144, 0, 983105, 262144, 0, 1179713, 262144, 0, 1245249, 262144, 0, 852034, 262144, 0, 917570, 262144, 0, 983106, 262144, 0, 1048642, 262144, 0, 1245250, 262144, 0, 589891, 262144, 0, 655427, 262144, 0, 720963, 262144, 0, 786499, 262144, 0, 852035, 262144, 0, 1048643, 262144, 0, 1114179, 262144, 0, 1179715, 262144, 0, 1245251, 262144, 0, 589893, 262144, 0, 655429, 262144, 0, 720965, 262144, 0, 786501, 262144, 0, 852037, 262144, 0, 917573, 262144, 0, 983109, 262144, 0, 1048645, 262144, 0, 1114181, 262144, 0, 1179717, 262144, 0, 1245253, 262144, 0, 1245254, 262144, 0, 589895, 262144, 0, 720967, 262144, 0, 786503, 262144, 0, 852039, 262144, 0, 983111, 262144, 0, 1048647, 262144, 0, 1114183, 262144, 0, 1245255, 262144, 0, 589896, 262144, 0, 720968, 262144, 0, 852040, 262144, 0, 983112, 262144, 0, 1114184, 262144, 0, 1245256, 262144, 0, 589897, 262144, 0, 720969, 262144, 0, 852041, 262144, 0, 917577, 262144, 0, 983113, 262144, 0, 1114185, 262144, 0, 1245257, 262144, 0, 589898, 262144, 0, 655434, 262144, 0, 720970, 262144, 0, 1114186, 262144, 0, 1179722, 262144, 0, 1245258, 262144, 0, 589900, 262144, 0, 655436, 262144, 0, 720972, 262144, 0, 786508, 262144, 0, 852044, 262144, 0, 917580, 262144, 0, 983116, 262144, 0, 1048652, 262144, 0, 1114188, 262144, 0, 1179724, 262144, 0, 1245260, 262144, 0, 1245261, 262144, 0, 1245262, 262144, 0, 589903, 262144, 0, 655439, 262144, 0, 720975, 262144, 0, 786511, 262144, 0, 852047, 262144, 0, 917583, 262144, 0, 1245263, 262144, 0, 1245264, 262144, 0, 1245265, 262144, 0, 1048658, 262144, 0, 1245266, 262144, 0, 1048659, 262144, 0, 1245267, 262144, 0, 1048660, 262144, 0, 1114196, 262144, 0, 1179732, 262144, 0, 1245268, 262144, 0, 1114175, 262144, 0, 983119, 262144, 0, 1048655, 262144, 0, 1048656, 262144, 0, 1048657, 262144, 0, -720819, 196608, 0, -655283, 196608, 0, -589747, 196608, 0, -720818, 196608, 0, -655282, 196608, 0, -589746, 196608, 0, -720817, 196608, 0, -655281, 196608, 0, -589745, 196608, 0, -720816, 196608, 0, -655280, 196608, 0, -589744, 196608, 0, -720815, 196608, 0, -655279, 196608, 0, -589743, 196608, 0, -786356, 262144, 0, -720820, 262144, 0, -655284, 262144, 0, -589748, 262144, 0, -786350, 262144, 0, -720814, 262144, 0, -655278, 262144, 0, -589742, 262144, 0, -1638324, 262144, 0, -1572788, 262144, 0, -1507252, 262144, 0, -1441716, 262144, 0, -1376180, 262144, 0, -1310644, 262144, 0, -1245108, 262144, 0, -1179572, 262144, 0, -1114036, 262144, 0, -1048500, 262144, 0, -982964, 262144, 0, -917428, 262144, 0, -851892, 262144, 0, -1638318, 262144, 0, -1572782, 262144, 0, -1507246, 262144, 0, -1441710, 262144, 0, -1376174, 262144, 0, -1310638, 262144, 0, -1245102, 262144, 0, -1179566, 262144, 0, -1114030, 262144, 0, -1048494, 262144, 0, -982958, 262144, 0, -917422, 262144, 0, -851886, 262144, 0, -1703859, 196608, 0, -1638323, 196608, 0, -1572787, 196608, 0, -1507251, 196608, 0, -1441715, 196608, 0, -1376179, 196608, 0, -1310643, 196608, 0, -1245107, 196608, 0, -1179571, 196608, 0, -1114035, 196608, 0, -1048499, 196608, 0, -982963, 196608, 0, -917427, 196608, 0, -851891, 196608, 0, -786355, 196608, 0, -1703858, 196608, 0, -1638322, 196608, 0, -1572786, 196608, 0, -1507250, 196608, 0, -1441714, 196608, 0, -1376178, 196608, 0, -1310642, 196608, 0, -1245106, 196608, 0, -1179570, 196608, 0, -1114034, 196608, 0, -1048498, 196608, 0, -982962, 196608, 0, -917426, 196608, 0, -851890, 196608, 0, -786354, 196608, 0, -1703857, 196608, 0, -1638321, 196608, 0, -1572785, 196608, 0, -1507249, 196608, 0, -1441713, 196608, 0, -1376177, 196608, 0, -1310641, 196608, 0, -1245105, 196608, 0, -1179569, 196608, 0, -1114033, 196608, 0, -1048497, 196608, 0, -982961, 196608, 0, -917425, 196608, 0, -851889, 196608, 0, -786353, 196608, 0, -1703856, 196608, 0, -1638320, 196608, 0, -1572784, 196608, 0, -1507248, 196608, 0, -1441712, 196608, 0, -1376176, 196608, 0, -1310640, 196608, 0, -1245104, 196608, 0, -1179568, 196608, 0, -1114032, 196608, 0, -1048496, 196608, 0, -982960, 196608, 0, -917424, 196608, 0, -851888, 196608, 0, -786352, 196608, 0, -1703855, 196608, 0, -1638319, 196608, 0, -1572783, 196608, 0, -1507247, 196608, 0, -1441711, 196608, 0, -1376175, 196608, 0, -1310639, 196608, 0, -1245103, 196608, 0, -1179567, 196608, 0, -1114031, 196608, 0, -1048495, 196608, 0, -982959, 196608, 0, -917423, 196608, 0, -851887, 196608, 0, -786351, 196608, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 45.0
offset_top = 24.0
offset_right = 85.0
offset_bottom = 64.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Play"

[node name="QuitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "Quit"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
